fully implemented about page

--- a/fidit_me_jakupovic/pubspec.yaml
+++ b/fidit_me_jakupovic/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
     sdk: flutter
   intl: any
   localstorage: ^5.0.0
+  url_launcher: ^6.3.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  maps_launcher: ^2.2.1
+  
+  
+  
   
   
 
