--- a/fidit_me_jakupovic/android/app/build.gradle
+++ b/fidit_me_jakupovic/android/app/build.gradle
@@ -24,10 +24,11 @@ android {
         applicationId = "com.example.fidit_me_jakupovic"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        minSdk = 21
         targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        versionCode = flutter.flutterVersionCode
+        versionName = flutter.flutterVersionName
+
     }
 
     buildTypes {
