--- a/fidit_me_jakupovic/pubspec.yaml
+++ b/fidit_me_jakupovic/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
   open_filex: ^4.5.0
+  share_plus: ^10.0.2
+  auto_size_text: ^3.0.0
   
 
 
