--- a/fidit_me_jakupovic/android/app/src/main/AndroidManifest.xml
+++ b/fidit_me_jakupovic/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
  <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
-        android:label="fidit_me_jakupovic"
+        android:label="FIDITme"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
