--- a/fidit_me_jakupovic/pubspec.yaml
+++ b/fidit_me_jakupovic/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ^3.5.0
@@ -52,6 +52,8 @@ dependencies:
   share_plus: ^10.0.2
   auto_size_text: ^3.0.0
   package_info_plus: ^8.0.2
+  flutter_launcher_icons: ^0.13.1
+  flutter_svg: ^2.0.10+1
   
 
 
@@ -85,8 +87,8 @@ flutter:
   generate: true ##used to enable autogeneration for langs
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/icon/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
